# This file documents the revision history for Perl extension Catalyst.

        - Test for using Moose in components which have a non-Moose base class
          Fixed by 349cda in Moose 0.78 (t0m)
        - Fix deprecation message for Catalyst::Dispatcher to refer
          to the class actually calling the deprecated method. RT#45741 (t0m)
        - Clarify limitations of $request->base and $request->secure.
          (Phil Mitchell)
        - Add 'use Catalyst' to documentation for a Moose MyApp class as
          noted by dmaki. (t0m)
        - Fix so that / (and other special characters) are URL encoded when
          passed into $c->uri_for as Args/CaptureArgs (t0m)
        - Fix development server so that $c->engine->env returns the correct
          environment (t0m)

5.80003 2009-04-29 16:23:53
        - Various POD tweaks. (hdp, dandv)
        - Fix formatting error in the regex fallback warning. (rafl)
        - Convert the dispatcher's and restarter engine's BUILD method to
          attribute builders to not override the BUILD method from
          MooseX::Emulate::Class::Accessor::Fast. (rafl)
        - Fix classes without metaclasses restarting, when not using
          B::Hooks::OP::Check::StashChange (t0m)
        - Fix the unattached chain debug table for endpoints with no
          parents at all. (rafl)
        - Turn of test aggregation by default. Only aggregate if the
          AGGREGATE_TESTS environment variable is set and a recent
          Test::Aggregate is available. (rafl)
        - Bump to MooseX::MethodAttributes 0.09, to gain the
          get_nearest_methods_with_attributes method allowing methods without
          attributes in a subclass to override those with attributes in a
          superclass. This fixes CatalystX::CRUD's method of overriding /
          disabling functionality from base controllers. (t0m)
        - Bump HTTP::Request::AsCGI dependency to avoid broken version (t0m)